# log_lib

./: CMakeLists.txt
include/log_lib/: Export.h  ILogger.h  LoggerMacros.h  LoggerManager.h  logger.h
include/log_lib/spdlog/: SpdlogAdapter.h
src/: LoggerManager.cpp  logger.cpp
src/spdlog/: SpdlogAdapter.cpp
